added template for states

--- a/CircularNavigation/templates/test.html
+++ b/CircularNavigation/templates/test.html
@@ -177,6 +177,8 @@ background:rgba(226,48,40,.0627451);
                 <h4>#Chinesegoods</h4>
                 
                 <h4>#ModiJi</h4>
+                <br>
+                {{args[1]|safe}}
             </div>
         </div>
     	</div>
@@ -255,6 +257,7 @@ var names = document.getElementById('statn').innerHTML;
       weight: 2,
       opacity: 1, 
       dashArray: '3',
+      color: "green",
       fillOpacity: 0.7,
     };
   }
