--- a/CircularNavigation/templates/state.html
+++ b/CircularNavigation/templates/state.html
@@ -263,7 +263,9 @@ background:rgba(226,48,40,.0627451);
 </div>
 <br>
 <br>
-
+{{args[4]}}
+<br>
+{{args[5]}}
 <script type="text/javascript">
 var names = document.getElementById('statn').innerHTML;
 var  loc = "hellp"
