--- a/CircularNavigation/templates/main.html
+++ b/CircularNavigation/templates/main.html
@@ -223,7 +223,7 @@
             function mapclick(e) {
                 var layer = e.target;
                 var props = layer.feature.properties;
-                layer.bindPopup('<input name="button" class="atext" type="submit" value=' + props.name +  '>').addTo(map);
+                layer.bindPopup('<input name="button" class="atext" type="submit" value="More About ' + props.name +  "\">").addTo(map);
                 layer.openPopup();
             }
 
@@ -239,11 +239,7 @@
                 style: style,
                 onEachFeature: onEachFeature
             }).addTo(map);
-
             
-
-            legend.addTo(map);
-
         </script>
         <br>
         <br>
