Added total number of sentiments; each phase

--- a/CircularNavigation/templates/fphase.html
+++ b/CircularNavigation/templates/fphase.html
@@ -94,7 +94,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>6,345</strong>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>{{ls1[5]}}</strong>
                 </p>
             </div>
             <div class="column yellow">
@@ -104,7 +104,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>4,144</strong></p>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>{{ls1[6]}}</strong></p>
             </div>
             <div class="column green">
                 <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive</h3>
@@ -114,7 +114,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
-                <strong>19,341</strong></p>
+                <strong>{{ls1[4]}}</strong></p>
             </div>
         </div>
         </div>
@@ -145,7 +145,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>7,565</strong>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>{{ls1[8]}}</strong>
                 </p>
             </div>
             <div class="column yellow">
@@ -156,7 +156,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>6,344</strong></p>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>{{ls1[9]}}</strong></p>
             </div>
             <div class="column green">
                 <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive
@@ -167,7 +167,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
-                    <strong>29,451</strong></p>
+                    <strong>{{ls1[7]}}</strong></p>
             </div>
         </div>
         <br>
@@ -195,7 +195,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>7,134</strong>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>{{ls1[11]}}</strong>
                 </p>
             </div>
             <div class="column yellow">
@@ -206,7 +206,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>5,677</strong></p>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>{{ls1[12]}}</strong></p>
             </div>
             <div class="column green">
                 <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive
@@ -217,7 +217,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
-                    <strong>16,671</strong></p>
+                    <strong>{{ls1[10]}}</strong></p>
             </div>
         </div>
         <br>
@@ -245,7 +245,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>5,314</strong>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>{{ls1[14]}}</strong>
                 </p>
             </div>
             <div class="column yellow">
@@ -256,7 +256,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <br>
-                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>7,347</strong></p>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>{{ls1[15]}}</strong></p>
             </div>
             <div class="column green">
                 <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive
@@ -267,7 +267,7 @@ background:rgba(226,48,40,.0627451);
                 <br>
                 <br>
                 <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
-                    <strong>20,561</strong></p>
+                    <strong>{{ls1[13]}}</strong></p>
             </div>
         </div>
         <br>
