--- a/templates/main.html
+++ b/templates/main.html
@@ -47,7 +47,7 @@
             }
 
         .paral {
-            min-height: 350px;
+            height: 350px;
             background-attachment: fixed;
             background-size: cover;
             background-position: 50% 50%;
@@ -258,7 +258,7 @@
                     <li><a href="#"><span class="icon-picture"></span></a></li>
                     <li><a href="{{url_for('four')}}"><span>4</span></a></li>
                     <li><a href="{{url_for('home')}}"><span class="icon-home"></span></a></li>
-                    <li><a href="#"><span class="icon-facetime-video"></span></a></li>
+                    <li><a href="{{url_for('prediction')}}"><span >Pred</span></a></li>
                     <li><a href="#"><span class="icon-envelope-alt"></span></a></li>
                 </ul>
             </div>
